--- a/tsp.ipynb
+++ b/tsp.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Graph import Graph\n",
+    "from Graph_directed import Graph\n",
     "from GeneticAlgorithmTSP import GeneticAlgorithmTSP\n",
     "import heapq"
    ]
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,22 +103,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "3"
+       "({'1': 0, '2': 3, '3': 1, '4': 4, '5': 2},\n",
+       " {'2': '1', '3': '1', '4': '3', '5': '3'})"
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 7
     }
    ],
    "source": [
-    "graph.getDistance('1','2')"
+    "dijsktra(graph,'1')"
    ]
   },
   {
