--- a/tsp.ipynb
+++ b/tsp.ipynb
@@ -23,19 +23,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "from Graph_directed import Graph\n",
     "from GeneticAlgorithmTSP import GeneticAlgorithmTSP\n",
     "import heapq\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_graph = Graph()\n",
+    "input_graph = Graph({})\n",
     "sfc = []\n",
     "with open(\"input.txt\",\"r\") as f:\n",
     "    n,m = int_data(f.readline().split())\n",
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,18 +121,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "dijsktra_dic = {}\n",
+    "dijsktra_path = {}\n",
     "for item in sfc_item:\n",
-    "    dijsktra_dic[item] = dijsktra(graph,item)[0]"
+    "    dijsktra_dic[item] = dijsktra(input_graph,item)[0]\n",
+    "    dijsktra_path[item] = dijsktra(input_graph,item)[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "({'1': 0, '2': 3, '3': 1, '4': 4, '5': 2},\n",
+       " {'2': '1', '3': '1', '4': '3', '5': '3'})"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
+   "source": [
+    "dijsktra(input_graph,'1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'3'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "def full_path(path):\n",
+    "    for "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'2'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "random.choice(sfc[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +207,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 25
     }
    ],
    "source": [
@@ -151,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,27 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'2': 3, '4': 4}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 48
-    }
-   ],
+   "outputs": [],
    "source": [
     "sfc_graph.setStartEnd('1','5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,11 +264,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "list_node.remove('5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {}\n",
+    "a[1] = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<Graph_directed.Graph at 0x7fdc909c5d68>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
+   "source": [
+    "graph = Graph({})\n",
+    "graph.setAdjacent('a', 'b', 4)\n",
+    "graph.setAdjacent('a', 'c', 4)\n",
+    "graph.setAdjacent('a', 'd', 7)\n",
+    "graph.setAdjacent('a', 'e', 3)\n",
+    "graph.setAdjacent('b', 'c', 2)\n",
+    "graph.setAdjacent('b', 'd', 3)\n",
+    "graph.setAdjacent('b', 'e', 5)\n",
+    "graph.setAdjacent('c', 'd', 2)\n",
+    "graph.setAdjacent('c', 'e', 3)\n",
+    "graph.setAdjacent('d', 'e', 6)"
    ]
   },
   {
