--- a/tsp.ipynb
+++ b/tsp.ipynb
@@ -2,13 +2,9 @@
  "metadata": {
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.9 64-bit ('cuong': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "ecc1e4f304a5940980a1abf3c6832677e1614538ae65eb7fd0aa06be02d1615f"
-    }
-   }
+   "name": "python36964bitbertcondafe76e7349f53486ca9029903b6e40edd",
+   "display_name": "Python 3.6.9 64-bit ('bert': conda)",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -16,17 +12,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Graph_directed import Graph\n",
     "from GeneticAlgorithmTSP import GeneticAlgorithmTSP\n",
@@ -40,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +53,53 @@
     "    for i in range(l):\n",
     "        sfc.append(random.sample(range(1,n), random.randint(1,max_len_sfc) ))\n",
     "    sfc.append(end)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_data_txt(n,m,l,f_out,max_weight = 10, max_len_sfc = 4):\n",
+    "    with open(f_out,'w') as f:\n",
+    "    # input_graph = Graph({})\n",
+    "        sfc = []\n",
+    "        f.write(str(n)+' '+str(m)+'\\n')\n",
+    "        if (m > n*(n-1)):\n",
+    "            print('Too many vertex')\n",
+    "            return\n",
+    "        c = 1\n",
+    "        list_vertex = []\n",
+    "        while c <= m:\n",
+    "            a = random.randint(1,n)\n",
+    "            b = random.randint(1,n)\n",
+    "            if (a != b) and ((a,b) not in list_vertex):\n",
+    "                # list_vertex.append((a,b))\n",
+    "                f.write(str(a)+' '+ str(b)+' '+str(random.randint(1,max_weight))+'\\n')\n",
+    "                c = c + 1\n",
+    "        start,end = random.sample(range(1,n), 2)\n",
+    "        f.write(str(start) + ' '+str(end)+'\\n')\n",
+    "        f.write(str(l)+'\\n')\n",
+    "        # input_graph.setStartEnd(start,finish)\n",
+    "        # sfc.append(start)\n",
+    "        for i in range(l):\n",
+    "            sfc.append(random.sample(range(1,n), random.randint(2,max_len_sfc) ))\n",
+    "        for i in range(l):\n",
+    "            out = ''\n",
+    "            for item in sfc[i]: \n",
+    "                out = out + str(item) + ' '\n",
+    "            f.write(out+'\\n')\n",
+    "        # sfc.append(end)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_data_txt(50,30,20,'random_1.txt')"
    ]
   },
   {
@@ -382,11 +417,7 @@
     "    #nx.draw_networkx_edge_labels(G,pos,edge_labels=edge_labels,label_pos=0.15, font_size=10)\n",
     "    nx.draw_networkx_edges(G,pos, connectionstyle='arc3, rad = 0.3', alpha=0.2)\n",
     "    nx.draw_networkx_labels(G,pos,nodes,font_size=20,font_color='r')\n",
-    "    # plt.axis('off')\n",
-    "    # plt.show()\n",
-    "    #plt.show()\n",
-    "    #H = G.plot(edge_labels=True, graph_border=True)\n",
-    "    #H.show()"
+    "    plt.savefig(\"output/input.png\", format=\"PNG\")"
    ]
   },
   {
