--- a/tsp.ipynb
+++ b/tsp.ipynb
@@ -12,18 +12,112 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Graph_directed import Graph\n",
-    "from GeneticAlgorithmTSP import GeneticAlgorithmTSP\n",
+    "# from Graph_directed import Graph\n",
+    "# from GeneticAlgorithmTSP import GeneticAlgorithmTSP\n",
+    "import heapq\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
     "import heapq\n",
     "import numpy as np\n",
     "import random\n",
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
     "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_char(num):\n",
+    "    return chr(num+97)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'\\x81'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
+   "source": [
+    "map_char(32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def computeLowHighIndexes(string):\n",
+    "    index_low = np.random.randint(1, len(string)-1)\n",
+    "    index_high = np.random.randint(index_low+1, len(string))\n",
+    "    while index_high - index_low > math.ceil(len(string)//2):\n",
+    "        try:\n",
+    "            index_low = np.random.randint(1, len(string))\n",
+    "            index_high = np.random.randint(index_low+1, len(string))\n",
+    "        except ValueError:\n",
+    "            pass\n",
+    "    return (index_low, index_high)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crossover(parent1, parent2):\n",
+    "    parent1 = parent1.replace('-','')\n",
+    "    parent2 = parent2.replace('-','')\n",
+    "    offspring = ['' for allele in range(len(parent1))]\n",
+    "    index_low, index_high = computeLowHighIndexes(parent1)\n",
+    "    \n",
+    "    offspring[index_low:index_high+1] = list(parent1)[index_low:index_high+1]\n",
+    "    offspring_available_index = list(range(0, index_low)) + list(range(index_high+1, len(parent1)))        \n",
+    "    for allele in parent2:\n",
+    "        if '' not in offspring:\n",
+    "            break\n",
+    "        if allele not in offspring:\n",
+    "            offspring[offspring_available_index.pop(0)] = allele\n",
+    "    return ''.join(v for v in offspring) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(3, 7)\n(5, 8)\n(7, 8)\n(4, 8)\n(4, 6)\n(4, 8)\n(8, 8)\n(6, 7)\n(8, 8)\n(2, 6)\n(4, 7)\n(1, 3)\n(5, 6)\n(5, 6)\n(4, 7)\n(8, 7)\n(2, 3)\n(6, 8)\n(7, 8)\n(4, 6)\n(5, 8)\n(0, 1)\n(4, 8)\n(5, 7)\n(3, 7)\n(8, 7)\n(7, 8)\n(6, 7)\n(4, 5)\n(4, 6)\n(5, 6)\n(2, 5)\n(6, 8)\n(0, 2)\n(6, 7)\n(7, 8)\n(3, 4)\n(5, 8)\n(2, 6)\n(6, 7)\n(7, 8)\n(4, 6)\n(7, 8)\n(3, 4)\n(7, 8)\n(7, 8)\n(0, 4)\n(7, 8)\n(4, 5)\n(7, 8)\n(7, 8)\n(3, 5)\n(3, 7)\n(5, 6)\n(4, 5)\n(2, 6)\n(0, 3)\n(3, 6)\n(3, 6)\n(2, 3)\n(4, 5)\n(3, 7)\n(1, 2)\n(7, 8)\n(4, 7)\n(4, 6)\n(1, 2)\n(2, 4)\n(5, 7)\n(1, 5)\n(3, 4)\n(5, 6)\n(1, 4)\n(5, 7)\n(5, 7)\n(1, 3)\n(6, 8)\n(2, 6)\n(1, 4)\n(0, 2)\n(7, 8)\n(8, 5)\n(6, 7)\n(4, 8)\n(2, 4)\n(4, 7)\n(4, 7)\n(6, 7)\n(4, 6)\n(6, 7)\n(3, 6)\n(6, 7)\n(6, 7)\n(2, 6)\n(6, 8)\n(4, 5)\n(1, 4)\n(1, 5)\n(7, 8)\n(4, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(100):\n",
+    "    print(computeLowHighIndexes('213546554'))"
    ]
   },
   {
