--- a/tsp.ipynb
+++ b/tsp.ipynb
@@ -12,12 +12,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Graph_directed import Graph\n",
-    "from GeneticAlgorithmTSP import GeneticAlgorithmTSP\n",
+    "# from Graph_directed import Graph\n",
+    "# from GeneticAlgorithmTSP import GeneticAlgorithmTSP\n",
+    "import heapq\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
     "import heapq\n",
     "import numpy as np\n",
     "import random\n",
@@ -28,7 +34,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def swap( index_low, index_high, string):\n",
+    "    string = list(string)\n",
+    "    string[index_low], string[index_high] = string[index_high], string[index_low]\n",
+    "    return ''.join(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'126453'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 53
+    }
+   ],
+   "source": [
+    "swap(2,5,'123456')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_char(num):\n",
+    "    return chr(num+97)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'\\x81'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 55
+    }
+   ],
+   "source": [
+    "map_char(32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def computeLowHighIndexes(string):\n",
+    "        index_low = np.random.randint(1, len(string)-2)\n",
+    "        index_high = np.random.randint(index_low+1, len(string))\n",
+    "        while index_high - index_low > math.ceil(len(string)//2):\n",
+    "            try:\n",
+    "                index_low = np.random.randint(1, len(string)-2)\n",
+    "                index_high = np.random.randint(index_low+1, len(string))\n",
+    "            except ValueError:\n",
+    "                pass\n",
+    "        return (index_low, index_high)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crossover(parent1, parent2):\n",
+    "    parent1 = parent1.replace('-','')\n",
+    "    parent2 = parent2.replace('-','')\n",
+    "    offspring = ['' for allele in range(len(parent1))]\n",
+    "    index_low, index_high = computeLowHighIndexes(parent1)\n",
+    "    \n",
+    "    offspring[index_low:index_high+1] = list(parent1)[index_low:index_high+1]\n",
+    "    offspring_available_index = list(range(0, index_low)) + list(range(index_high+1, len(parent1)))        \n",
+    "    for allele in parent2:\n",
+    "        if '' not in offspring:\n",
+    "            break\n",
+    "        if allele not in offspring:\n",
+    "            offspring[offspring_available_index.pop(0)] = allele\n",
+    "    return ''.join(v for v in offspring) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crossover(parent1, parent2):\n",
+    "        offspring = ['' for allele in range(len(parent1))]\n",
+    "        index_low, index_high = computeLowHighIndexes(parent1)\n",
+    "        \n",
+    "        offspring[index_low:index_high+1] = list(parent1)[index_low:index_high+1]\n",
+    "        offspring_available_index = list(range(0, index_low)) + list(range(index_high+1, len(parent1)))        \n",
+    "        for allele in parent2:\n",
+    "            if '' not in offspring:\n",
+    "                break\n",
+    "            if allele not in offspring:\n",
+    "                offspring[offspring_available_index.pop(0)] = allele\n",
+    "        return ''.join(v for v in offspring) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crossover(parent1, parent2):\n",
+    "    index_low, index_high = computeLowHighIndexes(parent1)\n",
+    "    return parent1[:index_low] + parent2[index_low:index_high] + parent1[index_high:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'12325'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 60
+    }
+   ],
+   "source": [
+    "crossover('12345','54321')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sfc_nodes = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,15 +263,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generate_data_txt(50,30,20,'random_1.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -127,13 +286,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'Graph' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-66-0fd21bc9c859>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minput_graph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGraph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msfc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"random_2.txt\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Graph' is not defined"
+     ]
+    }
+   ],
    "source": [
     "input_graph = Graph({})\n",
     "sfc = []\n",
-    "with open(\"input.txt\",\"r\") as f:\n",
+    "with open(\"random_2.txt\",\"r\") as f:\n",
     "    n,m = int_data(f.readline().split())\n",
     "    for _ in range(m):\n",
     "        a,b,c = f.readline().split()\n",
@@ -149,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,9 +350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'sfc' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-50-4c653f072c2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msfc_item\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0msfc_part\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msfc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msfc_part\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0msfc_item\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msfc_item\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msfc_item\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sfc' is not defined"
+     ]
+    }
+   ],
    "source": [
     "sfc_item = []\n",
     "for sfc_part in sfc:\n",
