--- a/tsp.ipynb
+++ b/tsp.ipynb
@@ -12,16 +12,12 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 51,
-=======
-   "execution_count": 27,
->>>>>>> 1dcf22fdf7ace521c822b1a3a2d37afe1d2080a1
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from Graph_directed import Graph\n",
-    "# from GeneticAlgorithmTSP import GeneticAlgorithmTSP\n",
+    "from Graph_directed import Graph\n",
+    "from GeneticAlgorithmTSP import GeneticAlgorithmTSP\n",
     "import heapq\n",
     "import numpy as np\n",
     "import random\n",
@@ -38,7 +34,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 52,
    "metadata": {},
    "outputs": [],
@@ -72,9 +67,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-=======
-   "execution_count": 40,
->>>>>>> 1dcf22fdf7ace521c822b1a3a2d37afe1d2080a1
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,11 +76,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 55,
-=======
-   "execution_count": 43,
->>>>>>> 1dcf22fdf7ace521c822b1a3a2d37afe1d2080a1
    "metadata": {},
    "outputs": [
     {
@@ -99,11 +87,7 @@
       ]
      },
      "metadata": {},
-<<<<<<< HEAD
      "execution_count": 55
-=======
-     "execution_count": 43
->>>>>>> 1dcf22fdf7ace521c822b1a3a2d37afe1d2080a1
     }
    ],
    "source": [
@@ -112,16 +96,11 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 56,
-=======
-   "execution_count": 32,
->>>>>>> 1dcf22fdf7ace521c822b1a3a2d37afe1d2080a1
    "metadata": {},
    "outputs": [],
    "source": [
     "def computeLowHighIndexes(string):\n",
-<<<<<<< HEAD
     "        index_low = np.random.randint(1, len(string)-2)\n",
     "        index_high = np.random.randint(index_low+1, len(string))\n",
     "        while index_high - index_low > math.ceil(len(string)//2):\n",
@@ -131,26 +110,11 @@
     "            except ValueError:\n",
     "                pass\n",
     "        return (index_low, index_high)"
-=======
-    "    index_low = np.random.randint(1, len(string)-1)\n",
-    "    index_high = np.random.randint(index_low+1, len(string))\n",
-    "    while index_high - index_low > math.ceil(len(string)//2):\n",
-    "        try:\n",
-    "            index_low = np.random.randint(1, len(string))\n",
-    "            index_high = np.random.randint(index_low+1, len(string))\n",
-    "        except ValueError:\n",
-    "            pass\n",
-    "    return (index_low, index_high)"
->>>>>>> 1dcf22fdf7ace521c822b1a3a2d37afe1d2080a1
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 57,
-=======
-   "execution_count": 35,
->>>>>>> 1dcf22fdf7ace521c822b1a3a2d37afe1d2080a1
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +136,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 58,
    "metadata": {},
    "outputs": [],
@@ -229,31 +192,11 @@
    "outputs": [],
    "source": [
     "sfc_nodes = [1,2,3,4,5]"
-=======
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "(3, 7)\n(5, 8)\n(7, 8)\n(4, 8)\n(4, 6)\n(4, 8)\n(8, 8)\n(6, 7)\n(8, 8)\n(2, 6)\n(4, 7)\n(1, 3)\n(5, 6)\n(5, 6)\n(4, 7)\n(8, 7)\n(2, 3)\n(6, 8)\n(7, 8)\n(4, 6)\n(5, 8)\n(0, 1)\n(4, 8)\n(5, 7)\n(3, 7)\n(8, 7)\n(7, 8)\n(6, 7)\n(4, 5)\n(4, 6)\n(5, 6)\n(2, 5)\n(6, 8)\n(0, 2)\n(6, 7)\n(7, 8)\n(3, 4)\n(5, 8)\n(2, 6)\n(6, 7)\n(7, 8)\n(4, 6)\n(7, 8)\n(3, 4)\n(7, 8)\n(7, 8)\n(0, 4)\n(7, 8)\n(4, 5)\n(7, 8)\n(7, 8)\n(3, 5)\n(3, 7)\n(5, 6)\n(4, 5)\n(2, 6)\n(0, 3)\n(3, 6)\n(3, 6)\n(2, 3)\n(4, 5)\n(3, 7)\n(1, 2)\n(7, 8)\n(4, 7)\n(4, 6)\n(1, 2)\n(2, 4)\n(5, 7)\n(1, 5)\n(3, 4)\n(5, 6)\n(1, 4)\n(5, 7)\n(5, 7)\n(1, 3)\n(6, 8)\n(2, 6)\n(1, 4)\n(0, 2)\n(7, 8)\n(8, 5)\n(6, 7)\n(4, 8)\n(2, 4)\n(4, 7)\n(4, 7)\n(6, 7)\n(4, 6)\n(6, 7)\n(3, 6)\n(6, 7)\n(6, 7)\n(2, 6)\n(6, 8)\n(4, 5)\n(1, 4)\n(1, 5)\n(7, 8)\n(4, 7)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(100):\n",
-    "    print(computeLowHighIndexes('213546554'))"
->>>>>>> 1dcf22fdf7ace521c822b1a3a2d37afe1d2080a1
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 63,
-=======
-   "execution_count": 2,
->>>>>>> 1dcf22fdf7ace521c822b1a3a2d37afe1d2080a1
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,6 +221,33 @@
     "    for i in range(l):\n",
     "        sfc.append(random.sample(range(1,n), random.randint(1,max_len_sfc) ))\n",
     "    sfc.append(end)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mutate(self, genome):\n",
+    "    if np.random.random() < self.mutationRate:\n",
+    "        index_mutate = random.randint(1,len(genome)-2)\n",
+    "        sfc_mutate = graph.sfc[index_mutate]\n",
+    "        mutated = random.choice(sfc_mutate)\n",
+    "        print('index   : ', index_mutate)\n",
+    "        print('mutated : ', mutated)\n",
+    "        return genome[:index_mutate-1] + mutated + genome[index_mutate:]\n",
+    "    else:\n",
+    "        return genome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mutate('123568')"
    ]
   },
   {
@@ -330,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,21 +313,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'Graph' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-66-0fd21bc9c859>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minput_graph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGraph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msfc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"random_2.txt\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Graph' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_graph = Graph({})\n",
     "sfc = []\n",
@@ -377,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,21 +365,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'sfc' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-50-4c653f072c2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msfc_item\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0msfc_part\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msfc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msfc_part\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0msfc_item\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msfc_item\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msfc_item\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sfc' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sfc_item = []\n",
     "for sfc_part in sfc:\n",
@@ -432,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,28 +391,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "({'1': 0, '2': 3, '3': 1, '4': 4, '5': 2},\n",
-       " {'2': '1', '3': '1', '4': '3', '5': '3'})"
+       "({'6': 0,\n",
+       "  '11': 5,\n",
+       "  '2': 6,\n",
+       "  '4': 12,\n",
+       "  '7': 9,\n",
+       "  '9': 12,\n",
+       "  '14': 22,\n",
+       "  '15': 17,\n",
+       "  '8': 21,\n",
+       "  '13': 20,\n",
+       "  '10': 24,\n",
+       "  '12': 23,\n",
+       "  '3': 29,\n",
+       "  '1': 24,\n",
+       "  '5': 27},\n",
+       " {'11': '6',\n",
+       "  '2': '6',\n",
+       "  '4': '11',\n",
+       "  '7': '2',\n",
+       "  '9': '2',\n",
+       "  '14': '9',\n",
+       "  '15': '4',\n",
+       "  '8': '4',\n",
+       "  '13': '15',\n",
+       "  '10': '15',\n",
+       "  '12': '8',\n",
+       "  '3': '13',\n",
+       "  '1': '14',\n",
+       "  '5': '1'})"
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 75
     }
    ],
    "source": [
-    "dijsktra(input_graph,'1')"
+    "dijsktra(input_graph,'6')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def full_path_small(start,end):\n",
+    "    out = end + '-'\n",
+    "    while end != start:\n",
+    "        end = dijsktra_path[start][end]\n",
+    "        out = end + '-' + out\n",
+    "        print(out)\n",
+    "    return out[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "15-13-\n4-15-13-\n11-4-15-13-\n6-11-4-15-13-\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'6-11-4-15-13'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 90
+    }
+   ],
+   "source": [
+    "full_path_small('6','13')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'15'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 80
+    }
+   ],
+   "source": [
+    "dijsktra_path['6']['13']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,23 +514,6 @@
     "        else:\n",
     "            fullpath = fullpath + path[i]\n",
     "    return fullpath + path[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "(1, 2, 3)\t(1, 3, 1)\t(1, 4, 5)\t(2, 5, 5)\t(3, 4, 3)\t(3, 5, 1)\t(4, 3, 1)\t\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(input_graph)"
    ]
   },
   {
