--- a/tsp.ipynb
+++ b/tsp.ipynb
@@ -12,7 +12,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def swap( index_low, index_high, string):\n",
+    "def swap(index_low, index_high, string):\n",
     "    string = list(string)\n",
     "    string[index_low], string[index_high] = string[index_high], string[index_low]\n",
     "    return ''.join(string)"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 53
+     "execution_count": 100
     }
    ],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = map_char(50) + map_char(51)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['\\x93', '\\x94']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "list(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +116,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 55
+     "execution_count": 102
     }
    ],
    "source": [
@@ -96,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +207,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 60
+     "execution_count": 107
     }
    ],
    "source": [
@@ -187,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,34 +254,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mutate(self, genome):\n",
-    "    if np.random.random() < self.mutationRate:\n",
+    "def mutate(genome):\n",
+    "    if np.random.random() < 1:\n",
     "        index_mutate = random.randint(1,len(genome)-2)\n",
-    "        sfc_mutate = graph.sfc[index_mutate]\n",
+    "        sfc_mutate = sfc[index_mutate]\n",
     "        mutated = random.choice(sfc_mutate)\n",
     "        print('index   : ', index_mutate)\n",
     "        print('mutated : ', mutated)\n",
-    "        return genome[:index_mutate-1] + mutated + genome[index_mutate:]\n",
+    "        return genome[:index_mutate] + mutated + genome[index_mutate+1:]\n",
     "    else:\n",
     "        return genome"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "index   :  5\nmutated :  3\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'123453789'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 131
+    }
+   ],
    "source": [
-    "mutate('123568')"
+    "mutate('123456789')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
